[func] Prevent showing active filter chip of branches filter (entity portal) when all branches are visible

--- a/src/components/entities/portal/filterby-builder/dynamic-filterby/branch-multi-select/_style.scss
+++ b/src/components/entities/portal/filterby-builder/dynamic-filterby/branch-multi-select/_style.scss
@@ -15,8 +15,7 @@ div.entities-portal--branch-multi-select-list__container {
 div.entities-portal--branch-multi-select-filterby-preview__container {
   display: flex;
   align-items: center;
-
-  position: relative;
+  gap: 3px;
 
   user-select: none;
   cursor: pointer;
@@ -43,8 +42,7 @@ div.entities-portal--branch-multi-select-filterby-preview__container {
   }
 
   img.symbol {
-    padding-inline-end: $space-inline-xxSmall-em;
-    width: 100%;
-    height: 0.8rem;
+    height: 0.7rem;
+    aspect-ratio: 1/1;
   }
 }
